# gaudio

./: README.md  meson.build
autowah/: Makefile.win  gautowah.cpp  gautowah.dev  gautowah_private.h  gautowah_private.rc  gautowah_private.res
bassboost/: Makefile.win  bassboost_linux.cbp  bassboost_linux.depend  bassboost_linux.layout  gbassboost.cbp  gbassboost.cpp  gbassboost.depend  gbassboost.dev  gbassboost.layout  gbassboost_private.h  gbassboost_private.rc  gbassboost_private.res
echo/: Makefile.win  gecho.cbp  gecho.cpp  (+4 more)
gaudio/: Makefile.win  bs2b.cpp  decoder.cpp  dllmain.cpp  filterkit.cpp  g168effect.cpp  g3dcalc.cpp  gaddons.cpp  gaddons.h  gaddress.cpp  gaiffile.cpp  gaudio.cpp  gaudio_private.h  gaudio_private.rc  gaufile.cpp  gcatcher.h  gcontext.cpp  gcontext.h  gdecoder.h  gdecoderfactory.cpp  gdecpprocess.cpp  gdecreator.h  gdevice.cpp  gdriver.h  geffect.cpp  geffect.h  geffectfactory.cpp  gerror.cpp  gfade.cpp  gfilter.cpp  gfilter.h  glistener.cpp  glistener.h  gloop.cpp  gmain.cpp  gmain.h  gmath.h  gmemory.h  gmeta.cpp  gmeta.h  (+31 more)
gaudio/bs2b/: bs2b.c  meson.build
gaudio/codeblock/linux/: gaudio.cbp  gaudio.depend  gaudio.layout
gaudio/codeblock/windows/: gaudio.bmarks  gaudio.cbp  gaudio.cscope_file_list  gaudio.depend  gaudio.layout
gaudio/codeblock/windows/gaudio/Release/: gaudio_private.res
gaudio/gaudio/: CMakeLists.txt  creator.py  gaudio.cpp  gaudio.ncb  gaudio.sln  gaudio.vcproj
gaudio/gaudio/Release/: BuildLog.htm  gaudio.exp  gaudio_private.res  mt.dep
gaudio/libresample/: meson.build  resample.c  resample_defs.h
(+538 files in other folders)
